Bug 161965 - Presentation minimizer keeps the "Save settings as" box disabled on first run
Summary: Presentation minimizer keeps the "Save settings as" box disabled on first run
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-07-09 10:24 UTC by Gabor Kelemen (Collabora)
Modified: 2024-07-13 19:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue in Impress (15.00 KB, image/png)
2024-07-09 10:24 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-07-09 10:24:52 UTC
Created attachment 195182 [details]
Screenshot of the issue in Impress

When the user makes changes in the Impress Presentation minimizer settings, the option to save them as custom preset is disabled on the first run.

1. Open a new presentation with an empty profile LO
2. Go to Tools - Minimize Presentation
3. Make some changes on the wizard pages 2-4
4. On the last page of the wizard the "Save settings as" box is disabled, as if there were no changes made. This used to work before 7.5.
5. Press Finish, then rerun the minimizer wizard, but make no new changes in the pages
-> on the last page of the wizard the "Save settings as" box is now enabled.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9cea063049c210d671a4e23984fe3ca0da8c45ba
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Seems to have started with:

https://git.libreoffice.org/core/+/a70ad1568ea0fb5b4d7f888fb56fcee130afc433

author	Caolán McNamara <caolanm@redhat.com>	Mon Dec 05 11:44:48 2022 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Tue Dec 06 19:29:38 2022 +0000
tree a2235ebca8779a32fd4695d1320d7ed6bcc5ecd2
parent 8254bd826d6d415e80ef8dcfb39e8b5c67cf2aab [diff]

Resolves: tdf#121297 weld Presentation Minimizer

Adding CC to: Caolán McNamara
Comment 1 Commit Notification 2024-07-11 16:12:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f03610e9700c811158d034e54016e9ee3d1645b1

Resolves: tdf#161965 missing UpdateControlStates on page switch

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2024-07-11 16:17:37 UTC
done in trunk, backport to 24-8 in gerrit
Comment 3 Commit Notification 2024-07-13 19:13:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c13bd9d995d82a4f35122fbf1a99516799e83819

Resolves: tdf#161965 missing UpdateControlStates on page switch

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.