Resolves: tdf#161965 missing UpdateControlStates on page switch

since:

commit a70ad1568ea0fb5b4d7f888fb56fcee130afc433
Date:   Mon Dec 5 11:44:48 2022 +0000

    Resolves: tdf#121297 weld Presentation Minimizer

Change-Id: Ibe28ba79d958d306440807adec9c5bbb64a8801d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170348
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>